@@ -392,7 +392,8 @@ participating-org a:active span-lang,
 participating-org a:active	{color:rgba(206,131,0,1);}
 
 span-narrative.org-role,
-span-narrative.org-type		{color:rgba(255,255,255,1); background-color:rgba(101,101,101,0.4);}
+span-narrative.org-type,
+span-narrative.org-ref		{color:rgba(255,255,255,1); background-color:rgba(101,101,101,0.4);}
 
 
 /*	Location (version 2.02++)
@@ -554,6 +555,9 @@ provider-org		{color:rgba(255,255,255,1);}
 receiver-org		{color:rgba(255,255,255,1);}
 value				{color:rgba(255,255,255,1);}
 value span			{color:rgba(204,204,204,1);}
+
+span-narrative.provider-org-ref,
+span-narrative.receiver-org-ref	{color:rgba(255,255,255,1);}
 
 
 /*	Contact info for Publisher
