@@ -314,7 +314,7 @@
 				<div class="publisher"></div><span><img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</span>
 			</div><div class="search_query">
 				<div class="year"></div><span><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}</span>
-			</div><div class="search_query">
+			</div><div class="search_query" style="display:none;">
 				<div class="policy"></div><span><img src="{flava}search_policy.png" alt="Policy Marker and Significance icon" width="13" height="13"/>{search_policy_txt}</span>
 			</div><div class="search_query">
 				<div class="text"></div><span>{search_text_txt}</span>
