@@ -8,6 +8,11 @@ Add humanitarian-scope to import
 Display humanitarian-scope in SAVi
 Update all themes with new element
 Fix narrative css in location name
+Display ref attributes in participating-org
+Display ref attributes in provider-org
+Display ref attributes in receiver-org
+Update print-friendly css
+Hide policy-marker in refine search
 
 
 Development Portal (2019-01-02 shi)
